codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hooks_popup_shows_list_diagnostics.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 156
expression: popup
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Hooks                                                                                                        │
│ Lifecycle hooks from config and enabled plugins.                                                             │
│                                                                                                              │
│ Issues                                                                                                       │
│ ⚠ skipped invalid matcher for PreToolUse                                                                     │
│ ■ /tmp/hooks.json: failed to parse hooks config                                                              │
│                                                                                                              │
│ Event                 Installed   Active      Description                                                    │
│                                                                                                              │
│› PreToolUse            0           0           Before a tool executes                                        │
│  PermissionRequest     0           0           When permission is requested                                  │
│  PostToolUse           0           0           After a tool executes                                         │
│  PreCompact            0           0           Before context compaction                                     │
│  PostCompact           0           0           After context compaction                                      │
│  SessionStart          0           0           When a new session starts                                     │
│  SessionEnd            0           0           Right before a session ends                                   │
│  UserPromptSubmit      0           0           When the user submits a prompt                                │
│↓                                                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  enter details · esc close
