codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_preparation_disconnected.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
assertion_line: 2807
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80)).replace('◦', \"•\")"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
Reconnect failed — check the endpoint, then rel…│ CONTEXT LEDGER  context not
                                                │ measured · ≈0 source
• Queued follow-up inputs                       │ estimates
  ↳ x                                           │ Tab controls · Alt+C hide ·
    ↑ edit all · enter send                     │ Ctrl+click open file
────────────────────────────────────────────────┤
› describe                                      │ SMART PRUNE       [···] SYNC
────────────────────────────────────────────────┤ Reading current thread state
  ctrl+c quit                                   │ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  usage
                                                │ unavailable
                                                │ Context measurement
                                                │ unavailable until the first
                                                │ request snapshot
                                                │
                                                │ No portable context is
                                                │ available.
