codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_preparation_restored_input.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
assertion_line: 2654
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
────────────────────────────────────────────────┐ CONTEXT LEDGER  context not
  [Image #1]                                    │ measured · ≈0 source
                                                │ estimates
› [Image #2] describe $file                     │ Tab controls · Alt+C hide ·
────────────────────────────────────────────────┤ Ctrl+click open file
        100% context left · Tab Context Ledger  │
                                                │ SMART PRUNE       [···] SYNC
                                                │ Reading current thread state
                                                │ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  usage
                                                │ unavailable
                                                │ Context measurement
                                                │ unavailable until the first
                                                │ request snapshot
                                                │
                                                │ No portable context is
                                                │ available.
