codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupted_turn_error_message.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: last
---
■ Conversation interrupted - tell the model what to do differently
