codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__manual_compaction_pending.snap
---
source: tui/src/chatwidget/tests/compaction_tests.rs
assertion_line: 95
expression: "normalize_compaction_snapshot(render_bottom_popup(&chat, 80))"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
Compacting context (<elapsed> • esc to interrupt)      │ CONTEXT LEDGER  context not
  └ Making room to continue.                    │ measured · ≈0 source
                                                │ estimates
────────────────────────────────────────────────┤ Tab controls · Alt+C hide ·
› Ask Elpis to do anything                      │ Ctrl+click open file
────────────────────────────────────────────────┤
        100% context left · Tab Context Ledger  │ SMART PRUNE       [···] SYNC
                                                │ Reading current thread state
                                                │ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  usage
                                                │ unavailable
                                                │ Context measurement
                                                │ unavailable until the first
                                                │ request snapshot
                                                │
                                                │ No portable context is
                                                │ available.
